--- a/index.html
+++ b/index.html
@@ -36,11 +36,33 @@ const inventors = [
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
-    
+
+    /*const category = document.querySelector('.mw-content-ltr');
+    const links = [...category.querySelectorAll('a')];
+    const de = links
+                    .map(link => link.textcontent)
+                    .filter(street => street.includes('de'));*/
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
+    const nameArr = people.sort((lastOne,nextOne) => {
+      const [aFirst, aLast] = lastOne.split(', ')
+      const [bFirst, bLast] = nextOne.split(', ')
+      return aLast > bLast ? 1 : -1;
+    });
+    console.log(nameArr)
 
     // 8. Reduce Exercise
     // Sum up the instances of each of these
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
+
+    const transportation = data.reduce((obj, item) => {
+      if(!obj[item]){
+        obj[item] = 0;
+      }
+
+      obj[item]++
+      return obj
+    }, {})
+
+    console.log(transportation)
